RESOLVED FIXED181868
[Cocoa] _WKNSWindowExtras.h: Add missing availability annotation
https://bugs.webkit.org/show_bug.cgi?id=181868
Summary [Cocoa] _WKNSWindowExtras.h: Add missing availability annotation
Joseph Pecoraro
Reported 2018-01-19 11:33:37 PST
_WKNSWindowExtras.h: Add missing availability annotation Missed in r226536.
Attachments
[PATCH] Proposed Fix (1.02 KB, patch)
2018-01-19 12:52 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2018-01-19 12:52:05 PST
Created attachment 331773 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2018-01-19 13:22:35 PST
Comment on attachment 331773 [details] [PATCH] Proposed Fix Clearing flags on attachment: 331773 Committed r227231: <https://trac.webkit.org/changeset/227231>
WebKit Commit Bot
Comment 3 2018-01-19 13:22:37 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-01-19 13:23:34 PST
Note You need to log in before you can comment on or make changes to this bug.