[Cocoa] _WKNSWindowExtras.h: Add missing availability annotation https://bugs.webkit.org/show_bug.cgi?id=181868

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2018-01-19
Reviewed by Dan Bernstein.

* Shared/API/Cocoa/_WKNSWindowExtras.h:

Canonical link: https://commits.webkit.org/197707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227231 268f45cc-cd09-0410-ab3c-d52691b4dbfc